fixing issue where there was bottom spacing on main menu ul

--- a/themes/ucb/css/ucb.css
+++ b/themes/ucb/css/ucb.css
@@ -1199,6 +1199,7 @@ hr { margin: 0 0 20px 0; padding: 0; border: none; height: 1px; background: rgba
 
 /* Primary Navigation */
 #navigation-wrapper { position: relative; z-index: 1; }
+#navigation-wrapper ul { padding: 0; margin: 0; display: block; }
 
 /* Secondary Navigation */
 #secondary-navigation { font-size: 80%; }
@@ -2097,6 +2098,9 @@ body { margin: 0; padding: 0; }
 a:link, a:visited { color: #0277BD; transition: background-color 0.25s ease, border-color 0.25s ease, color 0.25s ease; text-decoration: none; text-decoration-color: rgba(2, 119, 189, 0.65); -webkit-text-decoration-color: rgba(2, 119, 189, 0.65); }
 a:hover { color: #B71C1C; text-decoration-color: rgba(183, 28, 28, 0.65); -webkit-text-decoration-color: rgba(183, 28, 28, 0.65); }
 a:active, a:focus { color: #B71C1C; text-decoration-color: rgba(183, 28, 28, 0.65); -webkit-text-decoration-color: rgba(183, 28, 28, 0.65); }
+
+/** Print Only */
+#print-site-name { display: none; }
 
 /** Contextual Links */
 ul.contextual-links li a:link, ul.contextual-links li a:visited { text-decoration: none !important; }
