--- a/themes/ucb/scss/components/_express.scss
+++ b/themes/ucb/scss/components/_express.scss
@@ -2,6 +2,13 @@
 @import "modules/colors";
 @import "modules/functions";
 
+
+/**
+ * Print Only
+ */
+#print-site-name {
+  display: none;
+}
 /**
  * Contextual Links
  */
