--- a/themes/ucb/scss/components/_menus.scss
+++ b/themes/ucb/scss/components/_menus.scss
@@ -70,6 +70,11 @@
 #navigation-wrapper {
   position: relative;
   z-index: 1;
+  ul {
+    padding: 0;
+    margin: 0;
+    display: block;
+  }
 }
 
 /* Secondary Navigation */
